Agregado proyecto eclipse+pagina misc1

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /t02-www/victor/xhtml/xhtml.ppt
 /t01-prog/temp/*
 /hoard/*
+/t02-www/eclipse-project/WebContent/attic/*
+/t02-www/eclipse-project/WebContent/seq/*.txt
