--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 /t02-www/victor/xhtml/xhtml.ppt
 /t01-prog/temp/*
 /hoard/*
+/private/*
 /t02-www/eclipse-project/WebContent/attic/*
 /t02-www/eclipse-project/WebContent/seq/*.txt
