--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 **/temp/*
 **/hoard/*
 **/private/*
+///t02-www/eclipse-project/WebContent/test*
 /t02-www/eclipse-project/WebContent/attic/*
 /t02-www/eclipse-project/WebContent/seq/*.txt
 **/.~lock*
+**/*.md.html
+**/*.novc.*
